set default encoding

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <nexus-staging-maven-plugin.version>1.6.5</nexus-staging-maven-plugin.version>
         <rxjava-jdbc.version>0.4</rxjava-jdbc.version>
         <slf4j-simple.version>1.7.7</slf4j-simple.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
