--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <slf4j.version>1.7.7</slf4j.version>
         <spring-jdbc.version>4.1.4.RELEASE</spring-jdbc.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <mockito.version>1.10.19</mockito.version>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
@@ -34,6 +35,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.davidmoten</groupId>
