--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring-jdbc.version>4.1.4.RELEASE</spring-jdbc.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mockito.version>1.10.19</mockito.version>
+        <byte-buddy.version>0.5.1</byte-buddy.version>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
@@ -35,6 +36,16 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${byte-buddy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
