--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+env:
+  global:
+  - secure: VZkv9R0WZ0H+/FRx5ygsjBRG9F4QxcZ7R91yw5cwyRIpyKjIgWw3fMnf+Ky9yYcX9HGSZ5Cq91v0DLrd45ldILgs3f1PmhWMU8kLbpGmO3c3PBekEO2O8+QA5dogA33bRVEltXZutVJmryGgaEuOQsl1vaGxHRImVSiGUQG/bAg=
+  - secure: Biy/10UkYORxRqSxWYq3FCoOgi7SYjRmqyUDQzvNwihPRP+fazmHqYJIxFd9KCfaovBYAP4WdXJcVvTO2VLaLypuv4kCsPwlsgYL3i5gBpexUelAT+zpqclb4eSCw9qrFnhpVagzXi7/K5si7V+SHCdijGmbYf88uTuYLSPvOi8=
 language: java
 jdk:
-  - oraclejdk7
-  - openjdk7
-  - oraclejdk8
+- oraclejdk7
+- openjdk7
+- oraclejdk8
 after_success:
-  - mvn clean cobertura:cobertura coveralls:cobertura
-
+- mvn clean cobertura:cobertura coveralls:cobertura
+- echo "<settings><servers><server><id>ossrh</id><username>\${env.REPO_USER}</username><password>\${env.REPO_KEY}</password></server></servers></settings>" > ~/settings.xml
+- mvn deploy --settings ~/settings.xml
