--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,22 @@
     <version>0.3-SNAPSHOT</version>
     <properties>
         <junit.version>4.12</junit.version>
-        <h2.version>1.4.184</h2.version>
-        <maven-source-plugin.version>2.4</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>2.10.1</maven-javadoc-plugin.version>
-        <nexus-staging-maven-plugin.version>1.6.5</nexus-staging-maven-plugin.version>
-        <rxjava-jdbc.version>0.4</rxjava-jdbc.version>
-        <slf4j.version>1.7.7</slf4j.version>
-        <byte-buddy.version>0.5.1</byte-buddy.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-jdbc.version>4.1.4.RELEASE</spring-jdbc.version>
+        <h2.version>1.4.186</h2.version>
+        <rxjava-jdbc.version>0.5.1</rxjava-jdbc.version>
+        <slf4j.version>1.7.10</slf4j.version>
+        <byte-buddy.version>0.5.6</byte-buddy.version>
+        <spring-jdbc.version>4.1.5.RELEASE</spring-jdbc.version>
         <mockito.version>1.10.19</mockito.version>
-        <jdbi.version>2.56</jdbi.version>
-        <sql2o.version>1.5.3</sql2o.version>
+        <jdbi.version>2.59</jdbi.version>
+        <sql2o.version>1.5.4</sql2o.version>
+        <maven-javadoc-plugin.version>2.10.2</maven-javadoc-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.5</nexus-staging-maven-plugin.version>
+        <maven-source-plugin.version>2.4</maven-source-plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
+        <coveralls-maven-plugin.version>2.2.0</coveralls-maven-plugin.version>
+        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
+        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
@@ -133,7 +137,7 @@
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
-                       <version>1.5</version>
+                       <version>${maven-gpg-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
@@ -198,7 +202,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -207,12 +211,12 @@
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>2.2.0</version>
+                <version>${coveralls-maven-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.6</version>
+                <version>${cobertura-maven-plugin.version}</version>
                 <configuration>
                     <format>xml</format>
                     <maxmem>256m</maxmem>
