--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.zapodot</groupId>
     <artifactId>embedded-db-junit</artifactId>
-    <version>0.5-SNAPSHOT</version>
+    <version>0.5</version>
     <properties>
         <junit.version>4.12</junit.version>
         <h2.version>1.4.190</h2.version>
