--- a/embedded-db-junit-liquibase/pom.xml
+++ b/embedded-db-junit-liquibase/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>embedded-db-junit-parent</artifactId>
         <groupId>org.zapodot</groupId>
-        <version>0.8</version>
+        <version>0.9-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
