--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <junit.version>4.12</junit.version>
-        <h2.version>1.4.194</h2.version>
-        <rxjava-jdbc.version>0.6.8</rxjava-jdbc.version>
+        <h2.version>1.4.196</h2.version>
+        <rxjava-jdbc.version>0.7.8</rxjava-jdbc.version>
         <slf4j.version>1.7.24</slf4j.version>
-        <byte-buddy.version>1.5.6</byte-buddy.version>
+        <byte-buddy.version>1.6.14</byte-buddy.version>
         <spring-jdbc.version>4.2.3.RELEASE</spring-jdbc.version>
-        <mockito.version>2.2.21</mockito.version>
-        <jdbi.version>2.70</jdbi.version>
-        <sql2o.version>1.5.4</sql2o.version>
+        <mockito.version>2.8.47</mockito.version>
+        <jdbi.version>2.78</jdbi.version>
+        <sql2o.version>1.6.0-RC3</sql2o.version>
         <maven-javadoc-plugin.version>2.10.2</maven-javadoc-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.5</nexus-staging-maven-plugin.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
