--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
 language: java
 jdk:
 - oraclejdk8
+- oraclejdk9
 after_success:
 - mvn clean cobertura:cobertura coveralls:report
 - echo "<settings><servers><server><id>sonatype-nexus-snapshots</id><username>\${env.REPO_USER}</username><password>\${env.REPO_KEY}</password></server></servers></settings>" > ~/settings.xml
