--- a/pom.xml
+++ b/pom.xml
@@ -9,25 +9,27 @@
     <packaging>pom</packaging>
     <version>1.0.1-SNAPSHOT</version>
     <properties>
-        <junit.version>4.12</junit.version>
+        <byte-buddy.version>1.6.14</byte-buddy.version>
+        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
+        <coveralls-maven-plugin.version>3.1.0</coveralls-maven-plugin.version>
+        <flyway.version>5.0.3</flyway.version>
+        <guava.version>23.6-jre</guava.version>
         <h2.version>1.4.196</h2.version>
+        <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
+        <java.version>1.8</java.version>
+        <jdbi.version>2.78</jdbi.version>
+        <junit.version>4.12</junit.version>
+        <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
+        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>2.10.2</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>2.4</maven-source-plugin.version>
+        <mockito.version>2.8.47</mockito.version>
+        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rxjava-jdbc.version>0.7.8</rxjava-jdbc.version>
         <slf4j.version>1.7.24</slf4j.version>
-        <byte-buddy.version>1.6.14</byte-buddy.version>
         <spring-jdbc.version>4.2.3.RELEASE</spring-jdbc.version>
-        <mockito.version>2.8.47</mockito.version>
-        <jdbi.version>2.78</jdbi.version>
         <sql2o.version>1.6.0-RC3</sql2o.version>
-        <maven-javadoc-plugin.version>2.10.2</maven-javadoc-plugin.version>
-        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-        <maven-source-plugin.version>2.4</maven-source-plugin.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
-        <coveralls-maven-plugin.version>3.1.0</coveralls-maven-plugin.version>
-        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
-        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-        <guava.version>23.6-jre</guava.version>
-        <flyway.version>5.0.3</flyway.version>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
@@ -223,14 +225,27 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.eluder.coveralls</groupId>
                     <artifactId>coveralls-maven-plugin</artifactId>
                     <version>${coveralls-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>prepare-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
