--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ jdk:
 - oraclejdk8
 - oraclejdk9
 after_success:
-- mvn clean cobertura:cobertura coveralls:report
+- mvn clean test jacoco:report coveralls:report
 - echo "<settings><servers><server><id>sonatype-nexus-snapshots</id><username>\${env.REPO_USER}</username><password>\${env.REPO_KEY}</password></server></servers></settings>" > ~/settings.xml
 - mvn deploy --settings ~/settings.xml
