--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ env:
   global:
   - secure: VZkv9R0WZ0H+/FRx5ygsjBRG9F4QxcZ7R91yw5cwyRIpyKjIgWw3fMnf+Ky9yYcX9HGSZ5Cq91v0DLrd45ldILgs3f1PmhWMU8kLbpGmO3c3PBekEO2O8+QA5dogA33bRVEltXZutVJmryGgaEuOQsl1vaGxHRImVSiGUQG/bAg=
   - secure: Biy/10UkYORxRqSxWYq3FCoOgi7SYjRmqyUDQzvNwihPRP+fazmHqYJIxFd9KCfaovBYAP4WdXJcVvTO2VLaLypuv4kCsPwlsgYL3i5gBpexUelAT+zpqclb4eSCw9qrFnhpVagzXi7/K5si7V+SHCdijGmbYf88uTuYLSPvOi8=
+  - secure: NwfpdNVWEet7swNoQY26EbjTOODu6lm+rOVBucr1Oydy/Wifo3xGP8J6QafutZxX3D6j+tH/0TQvGFJJgoooXfvyWSEcjDRsX9TuUERGBfZ6jaqY6zkTPuxT5RKN7XRecOZRRkvKRsZnJtpRXGHtP/Os4i0OcunFZOsPBDX1xRo=
 language: java
+before_install:
+  - echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
 jdk:
 - oraclejdk8
 - oraclejdk9
@@ -11,3 +14,12 @@ after_success:
 - mvn clean test jacoco:report coveralls:report
 - echo "<settings><servers><server><id>sonatype-nexus-snapshots</id><username>\${env.REPO_USER}</username><password>\${env.REPO_KEY}</password></server></servers></settings>" > ~/settings.xml
 - mvn deploy --settings ~/settings.xml
+addons:
+  coverity_scan:
+    project:
+      name: "zapodot/embedded-db-junit"
+      description: "Build submitted via Travis CI"
+    notification_email: zapodot@gmail.com
+    build_command_prepend: "mvn clean"
+    build_command:   "mvn -DskipTests=true compile"
+    branch_pattern: coverity_scan
