--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <slf4j.version>1.7.24</slf4j.version>
         <spring-jdbc.version>5.0.2.RELEASE</spring-jdbc.version>
         <sql2o.version>1.6.0-RC3</sql2o.version>
+        <hsqldb.version>2.4.0</hsqldb.version>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
@@ -125,6 +126,12 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>${hsqldb.version}</version>
+                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>net.bytebuddy</groupId>
