--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,13 @@
         <flyway.version>5.0.7</flyway.version>
         <guava.version>25.0-jre</guava.version>
         <h2.version>1.4.197</h2.version>
+        <hsqldb.version>2.4.1</hsqldb.version>
         <jacoco-maven-plugin.version>0.8.1</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
         <junit.version>4.12</junit.version>
+        <junit-jupiter.version>5.2.0</junit-jupiter.version>
+        <junit-platform.version>1.2.0</junit-platform.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
@@ -30,7 +33,6 @@
         <slf4j.version>1.7.25</slf4j.version>
         <spring-jdbc.version>5.0.5.RELEASE</spring-jdbc.version>
         <sql2o.version>1.6.0-RC3</sql2o.version>
-        <hsqldb.version>2.4.0</hsqldb.version>
     </properties>
     <prerequisites>
         <maven>3.2.0</maven>
