--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <junit.version>4.12</junit.version>
         <junit-jupiter.version>5.3.0</junit-jupiter.version>
         <junit-platform.version>1.3.0</junit-platform.version>
+        <liquibase.version>3.6.2</liquibase.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
