Make sure JaCoCo agent is added for in all modules

--- a/embedded-db-junit/pom.xml
+++ b/embedded-db-junit/pom.xml
@@ -84,6 +84,10 @@
                 <version>${maven-compiler-plugin.version}</version>
             </plugin>
             <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
             </plugin>
