Build with openjdk

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: java
 before_install:
   - echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
 jdk:
-- oraclejdk8
+- openjdk8
 - oraclejdk9
 after_success:
 - mvn clean test jacoco:report coveralls:report
