--- a/embedded-db-junit-jupiter/pom.xml
+++ b/embedded-db-junit-jupiter/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>embedded-db-jupiter</artifactId>
+    <artifactId>embedded-db-junit-jupiter</artifactId>
 
     <dependencies>
         <dependency>
