--- a/embedded-db-plugin-jupiter-tests/pom.xml
+++ b/embedded-db-plugin-jupiter-tests/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>org.zapodot</groupId>
-            <artifactId>embedded-db-jupiter</artifactId>
+            <artifactId>embedded-db-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
