Remove logback and configure slf4j-simple

--- a/embedded-db-plugin-jupiter-tests/pom.xml
+++ b/embedded-db-plugin-jupiter-tests/pom.xml
@@ -30,6 +30,12 @@
             <groupId>org.zapodot</groupId>
             <artifactId>embedded-db-junit-liquibase</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
