--- a/embedded-db-core/pom.xml
+++ b/embedded-db-core/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
+            <classifier>jdk8</classifier>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
@@ -54,6 +55,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
