--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <flyway.version>8.5.13</flyway.version>
         <guava.version>31.1-jre</guava.version>
         <h2.version>1.4.200</h2.version>
-        <hsqldb.version>2.5.1</hsqldb.version>
+        <hsqldb.version>2.7.0</hsqldb.version>
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <java.version>1.8</java.version>
         <jdbi.version>2.78</jdbi.version>
@@ -163,6 +163,7 @@
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
                 <version>${hsqldb.version}</version>
+                <classifier>jdk8</classifier>
                 <optional>true</optional>
             </dependency>
             <dependency>
@@ -410,6 +411,7 @@
             </plugin>
         </plugins>
     </build>
+
     <modules>
         <module>embedded-db-core</module>
         <module>embedded-db-junit</module>
